2012-04-22  v1.?  r?
------------------------------------------------------------------------

  * Fix a race condition in kevent_wait() by holding the kqueue lock
    for the duration of the kevent() function call. To avoid going to
    sleep with the lock, it is dropped temporarily before calling 
    pselect() or similar system calls.
    Thanks to Eric Wong for reporting this bug.

2012-04-19  v1.0.6  r539
------------------------------------------------------------------------

  * Do not check if an unsigned integer is less than zero.
  
  * Prevent truncation of the `ident' argument by knote_lookup().
    Backport of r524 from the trunk.
    Thanks to Eric Wong for reporting this bug.

2012-02-09  v1.0.5  r534
------------------------------------------------------------------------

  * Fix a crash in kevent() if an invalid kqueue descriptor is provided.
    Thanks to James William Pye for reporting this bug.
  * Backport kevent_test() to check for a bad kqueue descriptor.
  * Support multiarch header locations in Debian.

2011-07-13  v1.0.4  r530
------------------------------------------------------------------------

  * Revert the change to use /usr/lib64 on 64-bit hosts because it breaks
    on Debian.

2011-07-09  v1.0.3  r529
------------------------------------------------------------------------

  * Don't allow the user to override essential CFLAGS such as -fpic
  * Add _BSD_SOURCE to CFLAGS

2011-03-24  v1.0.2  r462
------------------------------------------------------------------------

  * When building on a 64-bit Linux host, install libraries in /usr/lib64.

2010-09-18  v1.0.1  r453
------------------------------------------------------------------------

  * Eliminate an unused assignment in signal_handler() and 
    evfilt_signal_copyout(). Fixes a build failure on Fedora.

2010-09-18  v1.0  r344
------------------------------------------------------------------------

  * Support older Linux kernels that do not have the EPOLLRDHUP flag.
